test/library/standard/Random/stonea/fillRandom.good
fillRandom.chpl:3: error: 'Random' undeclared (first use this function)
