test/library/standard/Random/stonea/fillRandom.chpl
var A : [1..10] real;
var B : [1..10, 1..10] real;
Random.fillRandom(A, 1234);
Random.fillRandom(B, 1234);

writeln(A);
writeln(B);
